kitten/reported_bugs/rust/rust-83512/stderr.txt
error[E0658]: `#[doc(keyword)]` is experimental

 --> mutant.rs:1:13

  |

1 | trait Foo { # [ doc ( keyword = "match" ) ]

  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

  |

  = note: see issue #51315 <https://github.com/rust-lang/rust/issues/51315> for more information

  = help: add `#![feature(doc_keyword)]` to the crate attributes to enable



error: internal compiler error: compiler/rustc_middle/src/hir/map/mod.rs:764:18: expected item, found trait method quux in Foo::quux (hir_id=HirId { owner: DefId(0:4 ~ mutant[8787]::Foo::quux), local_id: 0 })



thread 'rustc' panicked at 'Box<Any>', /rustc/52e3dffa50cfffdcfa145c0cc0ba48b49abc0c07/library/std/src/panic.rs:59:5

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.53.0-nightly (52e3dffa5 2021-03-25) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [check_mod_attrs] checking attributes in top-level module

#1 [analysis] running analysis passes on this crate

end of query stack

error: aborting due to 2 previous errors



For more information about this error, try `rustc --explain E0658`.

